public class Spider extends Animal {
    
    public Spider() {
        super(8); // Spider mempunyai 8 kaki / legs
    }

    @Override
    public void eat() {
        System.out.println("Laba Laba Memakan Serangga.");
    }
}
