@startuml
abstract class Animal {
    -legs : int
    +Animal(legs: int)
    +walk()
    +eat() <<abstract>>
}

interface Pet {
    +setName(name: String)
    +getName() : String
    +play()
}

class Spider {
    +Spider()
    +eat()
}

class Dog {
    +Dog() 
    +getName(): Strring
    +setName(name: String) 
    +play() 
    +eat() 
    +walk() 
}

class Cat {
    -name : String
    +Cat(name: String)
    +Cat()
    +getName() : String
    +setName(name: String)
    +play()
    +eat()
    +walk()
}

Animal <|-- Spider
Animal <|-- Cat
Animal <|-- Dog
Pet <|.. Cat
Pet <|.. Dog
@enduml
